samples/_failures_safe/1761705458_005487_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28a3c17f.c: In function ‘main’:
./samples/SAFE/__tmp_28a3c17f.c:170:27: error: expected ‘;’ at end of input
  170 |                     printf
      |                           ^
      |                           ;
./samples/SAFE/__tmp_28a3c17f.c:170:21: error: expected declaration or statement at end of input
  170 |                     printf
      |                     ^~~~~~
./samples/SAFE/__tmp_28a3c17f.c:170:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_28a3c17f.c:170:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_28a3c17f.c:170:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_28a3c17f.c:170:21: error: expected declaration or statement at end of input
